# WARP-Q

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  warpq.py
examples/: WARPQ_demo.py
warpq/: __init__.py
warpq/warpq_models/NN_Genspeech/: data_scaler.pkl  mapping_model.h5
warpq/warpq_models/NN_Genspeech_TCDVoIP_PSup23/: mapping_model.h5
warpq/warpq_models/NN_PSup23/: mapping_model.h5
warpq/warpq_models/NN_TCDVoIP/: data_scaler.pkl  mapping_model.h5
warpq/warpq_models/RF_Genspeech/: mapping_model.pkl
warpq/warpq_models/RF_Genspeech_TCDVoIP_PSup23/: data_scaler.pkl
warpq/warpq_models/RF_PSup23/: data_scaler.pkl  mapping_model.pkl
warpq/warpq_models/RF_TCDVoIP/: mapping_model.pkl
